k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: falco-demo
  labels:
    app.kubernetes.io/part-of: falco-in-action
