k8s/arena-security-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arena-security-api
  namespace: falco-demo
  labels:
    app: arena-security-api
    role: compliant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arena-security-api
  template:
    metadata:
      labels:
        app: arena-security-api
        role: compliant
    spec:
      automountServiceAccountToken: false
      containers:
        - name: arena-security-api
          image: arena-security-api:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: arena-security-api
  namespace: falco-demo
  labels:
    app: arena-security-api
spec:
  selector:
    app: arena-security-api
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
